# cav22-mogym-artifact

./: .dockerignore  .gitattributes  .gitignore  .hermes_settings  Dockerfile  Experiments.ipynb  LICENSE  README.md  activate.sh  build-docker-image.sh  bundle-artifact.sh  pyproject.toml  setup.cfg  start-jupyter-lab.sh
.devcontainer/: Dockerfile  devcontainer.json
config/: jupyter_lab_config.py
experiments/learn_cdrive/cdrive/2022_01_20_133149959763_0_664e5/: 2022_01_20_133149959763_0_664e5.scores  2022_01_20_133149959763_0_664e5_1999.json  2022_01_20_133149959763_0_664e5_1999.pth  2022_01_20_133149959763_0_664e5_2999.json  2022_01_20_133149959763_0_664e5_2999.pth  2022_01_20_133149959763_0_664e5_3999.json  2022_01_20_133149959763_0_664e5_3999.pth  2022_01_20_133149959763_0_664e5_4999.json  2022_01_20_133149959763_0_664e5_4999.pth  2022_01_20_133149959763_0_664e5_5999.json  2022_01_20_133149959763_0_664e5_5999.pth  2022_01_20_133149959763_0_664e5_6999.json  2022_01_20_133149959763_0_664e5_6999.pth  2022_01_20_133149959763_0_664e5_7999.json  2022_01_20_133149959763_0_664e5_7999.pth  2022_01_20_133149959763_0_664e5_8999.json  2022_01_20_133149959763_0_664e5_8999.pth  2022_01_20_133149959763_0_664e5_999.json  hermes.info  (+7 more)
mogym/: Experiments.ipynb  dqn.py  learn_cdrive.hermes  learn_cdrive.py  learn_elevators.hermes  learn_elevators.py  learn_firewire.hermes  learn_firewire.py  learn_racetrack.hermes  learn_racetrack.py  load_nn.py
tracks/: barto-big_scaled_2.track  barto-big_scaled_3.track  barto-big_scaled_4.track  barto-big_scaled_5.track  hansen.track  tiny.track
(+484 files in other folders)
