[tool.poetry]
name = "mogym"
version = "0.1.0.dev0"
description = "NN learning using Momba."
authors = [
    "Maximilian Köhl <koehl@cs.uni-saarland.de>",
    "Michaela Klauck <klauck@cs.uni-saarland.de>",
    "Timo P. Gros <timopgros@cs.uni-saarland.de>"
]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9"
momba = { version = "^0.6.3", extras = ["engine", "gym"] }
click = "^7.0"
colorama = "^0.4.4"
racetrack = "^0.5.4"
jupyterlab = "^3.2.1"
rlmate = "^0.0.16"
torch = "*"
gym = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
black = { version = "^19.10b0", allow-prereleases = true }
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.2"
pep8-naming = "^0.9.1"
mypy = "^0.902"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
